--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@jscomponent/rollup",
   "version": "1.0.0",
   "description": "",
+  "repository": "github:jscomponent/rollup",
   "main": "index.js",
   "type": "module",
   "scripts": {
